# contoso-voice-agent

./: .gitignore  README.md  SETUP.md
.github/: copilot-instructions.md
.github/workflows/: azure-container-api.yml  (+1 more)
api/: .gitignore  Makefile  README.md  main.py  models.py  prompt.txt  prompty.json  pyproject.toml  realtime.py  requirements.txt  session.py  setup.py  telemetry.py
api/actions/: __init__.py  actions.prompty  functions.json  query.json
api/call/: script.jinja2  script.md
api/chat/: __init__.py  chat.prompty
api/src/realtime_chat/: __init__.py
api/src/realtime_chat/chat/: chat.prompty  purchases.json  schema.json
api/src/realtime_chat/config/: products.json  prompty.json
api/src/realtime_chat/core/: mockdata.py  models.py  session.py  telemetry.py  voice.py
api/src/realtime_chat/handlers/: api.py
api/src/realtime_chat/suggestions/: __init__.py  products.json  suggestions.prompty
api/src/realtime_chat/tests/: conftest.py  evaluations.md  sales.jsonl  test_chat.py  test_session.py  test_suggestions.py  test_voice.py
api/src/realtime_chat/tests/data/: test_chat.prompty
api/suggestions/: __init__.py  messages.json  purchases.json  suggestions.prompty  writeup.prompty
api/tests/: conftest.py  patch_modules.py  recommendations.md  test_chat.py  test_main.py  test_models.py  test_session.py  test_suggestions.py  test_voice.py  test_writeup.py  utils.py
api/voice/: __init__.py  script.jinja2
docs/: architecture.md  sequence-diagrams.md
web/: .eslintrc.json  Dockerfile  README.md  next.config.mjs  package-lock.json  package.json
(+56 files in other folders)
